@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 6.10 Not Released
+ - Will prompt the user to enable notifications
  - Fix chat action links
  - Fix editing connection when uri= is present
  - Fix position for "jump to now" above chat input
